<resources>
    <string name="app_name">云笔记</string>
    <string name="toolbar_title">云笔记</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="fab_item_title_camera">拍照</string>
    <string name="fab_item_title_record">录音</string>
    <string name="fab_item_title_handwriting">手写</string>
    <string name="fab_item_title_note">记事</string>
    <string name="drawer_sync">同步</string>
    <string name="search_hint">搜索</string>
    <string name="toolbar_save">保存</string>
    <string name="edit_title_hint">标题</string>
    <string name="edit_content_hint">写点什么吧(￣▽￣)"</string>
    <string name="edit_color_hint">选择</string>
    <string name="swipe_del">删除</string>
    <string name="login_btn">登录</string>
    <string name="login_username_hint">用户名</string>
    <string name="login_password_hint">密码</string>
    <string name="login_panel_login">登录</string>
    <string name="login_panel_cancel">取消</string>
    <string name="drawer_setting">选项</string>
    <string name="drawer_mark">标记</string>
    <string name="team_account_hint">对方账号</string>
    <string name="team_send">发送</string>

</resources>
