<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_add_note"
        android:icon="@drawable/ic_fab_item_note"
        android:title="@string/fab_item_title_note"
        />
    <item
        android:id="@+id/action_add_record"
        android:icon="@drawable/ic_fab_item_record"
        android:title="@string/fab_item_title_record"
        />
    <item
        android:id="@+id/action_add_pic"
        android:icon="@drawable/ic_fab_item_camera"
        android:title="@string/fab_item_title_camera" />
    <item
        android:id="@+id/action_add_handwriting"
        android:icon="@drawable/ic_fab_item_handwriting"
        android:title="@string/fab_item_title_handwriting" />
</menu>