<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="10dp">
    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:maxLength="20"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorGray"
        android:paddingTop="25dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:hint="@string/login_username_hint"
        android:background="@null"/>
    <ImageView
        android:layout_marginTop="10dp"
        android:id="@+id/line_1"
        android:layout_width="280dp"
        android:layout_centerHorizontal="true"
        android:layout_height="1dp"
        android:background="@color/colorLight_gray"
        android:layout_below="@id/username"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_1"
        android:inputType="textPassword"
        android:maxLength="25"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorGray"
        android:paddingTop="20dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:hint="@string/login_password_hint"
        android:background="@null"/>
    <ImageView
        android:layout_marginTop="10dp"
        android:id="@+id/line_2"
        android:layout_width="280dp"
        android:layout_centerHorizontal="true"
        android:layout_height="1dp"
        android:background="@color/colorLight_gray"
        android:layout_below="@id/password"
        />
    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/line_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/login_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGray"
            android:layout_gravity="left"
            android:text="@string/login_panel_login"
            android:textSize="18sp"
            android:onClick="login"
            />
        <TextView
            android:layout_gravity="left"
            android:layout_marginLeft="120dp"
            android:id="@+id/login_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGray"
            android:text="@string/login_panel_cancel"
            android:textSize="18sp"
            android:onClick="cancel"/>
    </LinearLayout>

</RelativeLayout>