<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="match_parent"
    android:padding="10dp">

    <EditText
        android:id="@+id/team_account"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:hint="@string/team_account_hint"
        android:maxLength="20"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="25dp"
        android:textColor="@color/colorGray" />

    <ImageView
        android:id="@+id/line_1"
        android:layout_width="280dp"
        android:layout_height="1dp"
        android:layout_below="@id/team_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@color/gainsboro" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/team_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/team_send"
            android:textColor="@color/colorGray"
            android:textSize="18sp"

            />

        <TextView
            android:id="@+id/team_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="120dp"
            android:text="@string/login_panel_cancel"
            android:textColor="@color/colorGray"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>