<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="270dp"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:background="#ffffff">
    <!--头像-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:orientation="vertical"
        android:background="@drawable/bg2"
        android:id="@+id/bg">
        <circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/circleImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
           android:layout_centerInParent="true"
            android:src="@drawable/john"
            app:border_width="2dp"
            app:border_color="#ffffff"
            android:elevation="2dp"
            />
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_below="@id/circleImageView"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/login_btn"
            android:layout_margin="10dp"
            android:textColor="@color/colorWhite"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/div_title1"
        android:layout_below="@id/bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginTop="10dp"
        android:paddingLeft="8dp"
        android:text="@string/drawer_setting"
        android:textColor="@color/colorGray"
        android:textSize="14sp"
        />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_list"
        android:layout_below="@id/div_title1"
        android:padding="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:divider="@null">
        </ListView>
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/div_title2"
        android:layout_below="@id/btn_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingLeft="8dp"
        android:text="@string/drawer_mark"
        android:textColor="@color/colorGray"
        android:textSize="14sp"
        />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mark_list"
        android:layout_below="@id/div_title2"
        android:padding="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:divider="@null">
    </ListView>


</RelativeLayout>